write swagger for product refer to ST-172-swagger
