# routes/api.php
@@ -68,9 +68,7 @@ Route::post('/admin-product-update/{id}', [AdminProductController::class, 'updat
 Route::delete('/admin-product-delete/{id}', [AdminProductController::class, 'destroy'])->name('admin-product-delete');// Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 //     return $request->user();
 // });
-Route::get('/admin-product', [AdminProductController::class, 'index'])->name('get-all-product');
-// Route::post('/admin-add-product', [AdminProductController::class, 'store'])->name('create-product');
-Route::delete('/admin-product-delete/{id}', [AdminProductController::class, 'destroy'])->name('delete-product');
+
 
 //Route user
 Route::get('admin-user', [AdminUserController::class, 'index'])->name('admin-user');
